--- a/Thesis/thesis.tex
+++ b/Thesis/thesis.tex
@@ -75,7 +75,7 @@
 
 \nocite{*}
 %\selectlanguage{english} % vermits de meeste referenties in het engels zijn.
-\bibliographystyle{alpha} 
+\bibliographystyle{plain} 
 
 \bibliography{thesis}           % dit bestand bevat informatie die
                                 %door bibtex wordt gelezen
